# Game-organizer

./: README.md  games.json  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: make-exuctible.yml
