[project]
name = "gameorganiser"
version = "0.1.0"
description = ""
authors = [
    {name = "dragonruler1000",email = "github@me.minecraftchest2.us"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
